--- a/roles/db_servers/tasks/main.yml
+++ b/roles/db_servers/tasks/main.yml
@@ -1,18 +1,6 @@
-
-
-  
-- name: Install Redis
-  apt:
-    name: redis-server
-    state: latest
-    update_cache: yes
-  when: ansible_os_family == 'Debian'
-  notify: start_enable_redis
-  
-- name: Install Redis (RHEL/CentOS)
-  yum:
-    name: redis
-    state: latest
-    update_cache: yes
-  when: ansible_os_family == 'RedHat'
-  notify: start_enable_redis
+- import_tasks: mysql.yml
+  become: true
+  tags:
+    - mysql
+  vars:
+    mysql_replication_enable: false
