--- a/roles/db_servers/tasks/mysql.yml
+++ b/roles/db_servers/tasks/mysql.yml
@@ -50,19 +50,7 @@
     name: mysqlclient
     state: present
   become: true
-
-- name: Install MySQL client library
-  pip:
-    name: PyMySQL
-    state: present
-  become: true
-
-# Or, if you decide to use MySQLdb for Python 2.x
-- name: Install MySQL client library
-  pip:
-    name: MySQLdb
-    state: present
-  become: true  
+  when: ansible_python.version.major >= 3
 
 - name: Configure MySQL root account
   community.mysql.mysql_user:
