--- a/roles/db_servers/tasks/mysql.yml
+++ b/roles/db_servers/tasks/mysql.yml
@@ -47,10 +47,10 @@
 
 - name: Install MySQL client library
   pip:
-    name: mysqlclient
+    name: MySQLdb
     state: present
   become: true
-  when: ansible_python.version.major >= 3
+  when: ansible_python.version.major < 3
 
 - name: Configure MySQL root account
   community.mysql.mysql_user:
