--- a/roles/db_servers/tasks/mysql.yml
+++ b/roles/db_servers/tasks/mysql.yml
@@ -45,6 +45,16 @@
   register: my_cnf
   become: true
 
+- name: Install pip
+  apt:
+    name: python3-pip
+    state: present
+
+- name: Install PyMySQL
+  pip:
+    name: pymysql
+    state: present  
+
 - name: Configure MySQL root account
   community.mysql.mysql_user:
     user: root
