--- a/roles/db_servers/tasks/mysql.yml
+++ b/roles/db_servers/tasks/mysql.yml
@@ -57,6 +57,8 @@
 
 - name: Configure MySQL root account
   community.mysql.mysql_user:
+    login_host: 'localhost'
+    login_user: 'root'
     name: root
     password: '{{ mysql_root_password }}'
     plugin: mysql_native_password
