--- a/roles/db_servers/tasks/mysql.yml
+++ b/roles/db_servers/tasks/mysql.yml
@@ -62,6 +62,7 @@
     name: root
     password: '{{ mysql_root_password }}'
     plugin: mysql_native_password
+    login_unix_socket: /var/lib/mysql/mysql.sock
     config_file: '{{ "/root/.my.cnf" if not my_cnf.changed else "" }}'
     state: present
   become: true
