--- a/roles/db_servers/tasks/mysql.yml
+++ b/roles/db_servers/tasks/mysql.yml
@@ -63,6 +63,7 @@
     host: ''
     password: '{{ mysql_root_password }}'
     plugin: mysql_native_password
+    login_unix_socket: /var/run/mysqld/mysqld.sock
     config_file: '{{ "/root/.my.cnf" if not my_cnf.changed else "" }}'
     state: present
   become: true
