--- a/roles/db_servers/tasks/mysql.yml
+++ b/roles/db_servers/tasks/mysql.yml
@@ -57,9 +57,9 @@
 
 - name: Configure MySQL root account
   community.mysql.mysql_user:
-    name: root
+    user: root
     password: '{{ mysql_root_password }}'
-    #login_unix_socket: /var/run/mysqld/mysqld.sock
+    login_unix_socket: /var/run/mysqld/mysqld.sock
     plugin: mysql_native_password
     config_file: '{{ "/root/.my.cnf" if not my_cnf.changed else "" }}'
     state: present
