--- a/roles/db_servers/tasks/mysql.yml
+++ b/roles/db_servers/tasks/mysql.yml
@@ -18,7 +18,15 @@
     validate: mysqld --defaults-file=%s --validate-config
     force: true
   notify: start_enable_mysql
-  when: ansible_os_family == "Debian"  
+  when: ansible_os_family == "Debian"
+
+- name: Set permissions on MySQL socket directory
+  ansible.builtin.file:
+    path: /var/run/mysqld
+    mode: "0755"
+    recurse: yes
+  become: true
+
 
 - name: DEBIAN | Ensure MySQL is running
   service:
