--- a/roles/db_servers/tasks/mysql.yml
+++ b/roles/db_servers/tasks/mysql.yml
@@ -66,7 +66,7 @@
 - name: Configure MySQL root account
   community.mysql.mysql_user:
     user: root
-    password: 'a123456'
+    password: '{{ _mysql_root_password }}'
     login_unix_socket: /var/run/mysqld/mysqld.sock
     plugin: mysql_native_password
     config_file: '{{ "/root/.my.cnf" if not my_cnf.changed else "" }}'
