--- a/roles/db_servers/tasks/mysql.yml
+++ b/roles/db_servers/tasks/mysql.yml
@@ -64,7 +64,7 @@
 
 - name: Configure MySQL root account
   community.mysql.mysql_user:
-    user: root
+    user: '{{ _mysql_db_user }}'
     password: '{{ _mysql_db_password }}'
     login_unix_socket: /var/run/mysqld/mysqld.sock
     plugin: mysql_native_password
