--- a/site.yml
+++ b/site.yml
@@ -5,4 +5,4 @@
     - monitoring
     - web_servers
   handlers:
-    - include_tasks: roles/db_servers/handlers/main.yml    
+    - include: /roles/db_servers/handlers/main.yml    
