--- a/site.yml
+++ b/site.yml
@@ -1,8 +1,6 @@
 - hosts: workstation
   become: true
   roles:
-    - db_servers
+    - db_server
     - monitoring
     - web_servers
-  handlers:
-    - include: roles/db_servers/handlers/main.yml    
