--- a/roles/db_servers/tasks/mysql.yml
+++ b/roles/db_servers/tasks/mysql.yml
@@ -73,3 +73,9 @@
     state: present
   become: true
   notify: restart mysql
+
+- name: restart mysql
+  service:
+    name: mysql
+    state: restarted
+    enabled: yes  
