--- a/roles/db_servers/tasks/mysql.yml
+++ b/roles/db_servers/tasks/mysql.yml
@@ -54,7 +54,7 @@
   become: true
 
 - name: restart mysql
-  service:
+  ansible.builtin.service:
     name: mysql
     state: restarted
     enabled: yes    
