--- a/roles/db_servers/tasks/mysql.yml
+++ b/roles/db_servers/tasks/mysql.yml
@@ -6,7 +6,7 @@
     state: latest
     update_cache: yes
   when: ansible_os_family == 'Debian'
-  notify: restart mysql
+  notify: mysql restarted
 
 - name: DEBIAN | Configure MySQL
   ansible.builtin.template:
@@ -17,7 +17,7 @@
     mode: 0644
     validate: mysqld --defaults-file=%s --validate-config
     force: true
-  notify: restart mysql
+  notify: mysql restarted
   when: ansible_os_family == "Debian"
 
 - name: Set permissions on MySQL socket directory
@@ -26,7 +26,7 @@
     mode: 0777
     recurse: yes
   become: true
-  notify: restart mysql
+  notify: mysql restarted
 
 - name: DEBIAN | Ensure MySQL is running
   service:
@@ -72,4 +72,4 @@
     config_file: '{{ "/root/.my.cnf" if not my_cnf.changed else "" }}'
     state: present
   become: true
-  notify: restart mysql
+  notify: mysql restarted
