--- a/roles/db_servers/tasks/mysql.yml
+++ b/roles/db_servers/tasks/mysql.yml
@@ -48,7 +48,7 @@
 - name: mysql restarted
   systemd:
     name: mysql
-    state: restarted     
+    state: started     
 
 - name: Install pip
   apt:
