--- a/roles/db_servers/handlers/main.yml
+++ b/roles/db_servers/handlers/main.yml
@@ -3,7 +3,7 @@
     name: mysql
     state: restarted
 
-- name: start_enable_redis
+- name: redis restarted
   systemd:
     name: redis restarted
     state: restarted    
