--- a/roles/web_servers/tasks/main.yml
+++ b/roles/web_servers/tasks/main.yml
@@ -3,11 +3,4 @@
     name: nginx
     state: latest
   when: ansible_os_family == 'Debian'
-  notify: start_enable_ngin
-  
-- name: Install Nginx (RHEL/CentOS)
-  yum:
-    name: nginx
-    state: latest
-  when: ansible_os_family == 'RedHat'
-  notify: start_enable_ngin
+  notify: start_enable_nginx
