--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,7 @@
 - hosts: workstation
   become: true
   roles:
-    - update_packages
+    - system
     - db_servers
     - monitoring
     - web_servers
