--- a/roles/system/tasks/users-groups.yml
+++ b/roles/system/tasks/users-groups.yml
@@ -5,6 +5,7 @@
   with_items: "{{ server_users }}"
   no_log: "{{ server_users_no_log }}"
   when: (item.state | default('present')) == 'present'
+  include_vars: users.yml
 
 - name: Create server users.
   user:
@@ -19,3 +20,4 @@
     createhome: "{{ item.createhome | default('yes') }}"
   with_items: "{{ server_users }}"
   no_log: "{{ server_users_no_log }}"
+  include_vars: users.yml
