--- a/roles/system/tasks/users-groups.yml
+++ b/roles/system/tasks/users-groups.yml
@@ -4,14 +4,14 @@
     state: present
   with_items: "{{ server_users }}"
   no_log: "{{ server_users_no_log }}"
-  when: (item.state | default('present')) == 'present'
+  when: (item.state | default('present')) == 'present' and server_users | length > 0
 
 - name: Assemble a list of secondary groups.
   set_fact:
     _server_users_secondary_groups: "{{ _server_users_secondary_groups }} + {{ item.groups | default([]) }}"
   with_items: "{{ server_users }}"
   no_log: "{{ server_users_no_log }}"
-  when: (item.state | default('present')) == 'present'
+  when: (item.state | default('present')) == 'present' and server_users | length > 0
 
 - name: Create secondary groups.
   group:
@@ -19,7 +19,7 @@
     state: present
   with_items: "{{ _server_users_secondary_groups }}"
   no_log: "{{ server_users_no_log }}"
-  when: item != ""
+  when: item != "" and server_users | length > 0
 
 - name: Create server users.
   user:
@@ -37,6 +37,7 @@
     move_home: "{{ item.move_home | default('yes') }}"
   with_items: "{{ server_users }}"
   no_log: "{{ server_users_no_log }}"
+  when: server_users | length > 0
 
 - name: Set authorized keys per user.
   authorized_key:
@@ -46,4 +47,4 @@
     exclusive: yes
   with_items: "{{ server_users }}"
   no_log: "{{ server_users_no_log }}"
-  when: (item.state | default('present')) == 'present'
+  when: (item.state | default('present')) == 'present' and server_users | length > 0
